# media_browser

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: .metadata  README.md  enhanced_permission_example.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/services/: image_cache_service.dart
example/lib/widgets/: artwork_widget.dart
example/test/: widget_test.dart
ios/: media_browser.podspec
ios/Classes/: MediaBrowserPlugin.swift  MediaBrowserService.swift  MediaExtractionService.swift
lib/: media_browser.dart  simple_audio_query.dart  simple_audio_query_method_channel.dart  simple_audio_query_platform_interface.dart  simple_media_query.dart
lib/src/data/datasources/: media_datasource.dart  method_channel_datasource.dart
lib/src/data/repositories/: media_repository.dart  media_repository_impl.dart
lib/src/domain/entities/: media_error.dart  media_permission.dart  permission_change_event.dart
lib/src/domain/repositories/: media_repository.dart
lib/src/domain/usecases/: check_permissions_usecase.dart  query_media_usecase.dart
lib/src/enums/: folder_browsing_mode.dart  media_filter.dart  sort_type.dart
lib/src/models/: album_model.dart  artist_model.dart  artwork_model.dart  audio_model.dart  document_model.dart  folder_model.dart  genre_model.dart  playlist_model.dart  query_options.dart  video_model.dart
lib/src/services/: browsing_service.dart  media_player_service.dart
lib/src/utils/: permission_data_manager.dart  timeout_utils.dart
linux/: media_browser_plugin.cc
macos/: media_browser.podspec
macos/Classes/: Logger.swift  MediaBrowserPlugin.swift  MediaBrowserService.swift
test/: media_browser_method_channel_test.dart  media_browser_test.dart
web/: media_browser_plugin.dart
windows/: CMakeLists.txt  media_browser_plugin.cpp  media_browser_plugin.h
(+4 files in other folders)
